--- a/etc/insight.ini
+++ b/etc/insight.ini
@@ -1,7 +1,7 @@
 [uwsgi]
 http=0.0.0.0:6666
-chdir=/usr/lib/python3.8/site-packages/omniinsight
+chdir=/usr/local/lib/python3.8/site-packages/omniinsight
 wsgi-file=insight.py
 callable=app
 processes=4
-threads=2
+threads=4
